--- a/index.html
+++ b/index.html
@@ -1,44 +1,47 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css">
+<meta charset="UTF-8">
+<meta name="apple-mobile-web-app-title" content="CodePen">
+<title>CodePen - Bootstrap Cover Template</title>
+<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'>
+<link rel="stylesheet" href="/css/style.css">
+<script>
+  window.console = window.console || function(t) {};
+</script>
+<script>
+  if (document.location.search.match(/type=embed/gi)) {
+    window.parent.postMessage("resize", "*");
+  }
+</script>
 </head>
-<body>
-    
-    <div class="site-wrapper">
-
-        <div class="site-wrapper-inner">
-  
-          <div class="container">
-  
-            <div class="masthead clearfix">
-              <div class="container inner">
-                <h3 class="masthead-brand"><img height="20%" width="35%" src="/images/meetOrg.png"></h3>
-                <nav>
-                  <ul class="nav masthead-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">Features</a></li>
-                    <li><a href="#">Contact</a></li>
-                  </ul>
-                </nav>
-              </div>
-            </div>
-  
-            <div class="inner cover">
-              <h1 class="cover-heading">This Page is Under Construction</h1>
-              <p class="lead">Huh?</p>
-              <p class="lead">
-                <a href="#" class="btn btn-lg btn-default">Learn more</a>
-              </p>
-            </div>
-  
-          </div>
-  
-        </div>
-  
-      </div>
+<body translate="no">
+<div class="site-wrapper">
+<div class="site-wrapper-inner">
+<div class="container">
+<div class="masthead clearfix">
+<div class="container inner">
+<h3 class="masthead-brand"><img height="50%" width="50%" src="images/meetOrg.png"></h3>
+<nav>
+<ul class="nav masthead-nav">
+<li class="active"><a href="#">Home</a></li>
+<li><a href="#">Features</a></li>
+<li><a href="#">Contact</a></li>
+</ul>
+</nav>
+</div>
+</div>
+<div class="inner cover">
+<h1 class="cover-heading">Cover your page.</h1>
+<p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+<p class="lead">
+<a href="#" class="btn btn-lg btn-default">Learn more</a>
+</p>
+ </div>
+</div>
+</div>
+</div>
 </body>
 </html>
