--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="apple-mobile-web-app-title" content="CodePen">
-<title>CodePen - Bootstrap Cover Template</title>
+<title>MeetOrg-Let's Automate Things</title>
 <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'>
 <link rel="stylesheet" href="/css/style.css">
 <script>
