--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 </div>
 </div>
 <div class="inner cover">
-<h1 class="cover-heading">Cover your page.</h1>
-<p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+<h1 class="cover-heading">This page is under Construction</h1>
+<p class="lead">Huh? Admin is still working hard on the Product < /> </p>
 <p class="lead">
 <a href="#" class="btn btn-lg btn-default">Learn more</a>
 </p>
