--- a/index.html
+++ b/index.html
@@ -167,22 +167,22 @@
                 <div class="col-sm-12 col-md-12 col-lg-12" >
 
                     <div class="row gallery-item">
-                        <div class="col-md-3">
+                        <div class="col-md-3 display-img">
 							<a href="img/works/1.png" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/1@2x.jpg">
 								<img src="img/works/1.png" class="img-responsive" alt="img">
 							</a>
 						</div>
-						<div class="col-md-3">
+						<div class="col-md-3 display-img">
 							<a href="img/works/2.png" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/1@2x.jpg">
 								<img src="img/works/2.png" class="img-responsive" alt="img" height="5%">
 							</a>
 						</div>
-						<div class="col-md-3">
+						<div class="col-md-3 display-img">
 							<a href="img/works/3.png" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/1@2x.jpg">
 								<img src="img/works/3.png" class="img-responsive" alt="img">
 							</a>
 						</div>
-						<div class="col-md-3">
+						<div class="col-md-3 display-img">
 							<a href="img/works/4.png" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/1@2x.jpg">
 								<img src="img/works/4.png" class="img-responsive" alt="img">
 							</a>
