Fixed Css and few typo

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 									<div class="wow fadeInUp" data-wow-delay="0.1s">
 									<div class="cta-text">
 									<h3>Got a Suggestion or Problem?</h3>
-									<p>We happy to know you feed back so that we can improve a lot.Feel free to contact us at anytime</p>
+									<p>We are happy to know your feedback so that we can improve a lot.Feel free to contact us at anytime</p>
 									</div>
 									</div>
 								</div>
